Copying an image from an URL is useless on mobile.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -939,9 +939,9 @@
   "update-name": "Update",
   "update-node-name": "Update Name",
   "upload-image": "Upload image",
+  "upload-images": "<0>Upload Images</0>",
   "uploading-file": "Uploading {progress}% ...",
   "uploading-files": "Uploading {loadedFiles} of {totalFiles} {progress}% ...",
-  "upload-or-copy-images": "<0>Upload Images</0> or <1>Copy Image</1>",
   "upload-or-copy-or-drop-images": "<0>Upload Images</0> or <1>Copy Image</1><2/>or drag and drop your images here",
   "upload-too-large": "File \"{name}\" cannot be uploaded because its size ({size}) is larger than maximum allowed size ({maxSize})",
   "used-by-addon": "Used by add-on:",
