--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -939,9 +939,9 @@
   "update-name": "Aktualizuj",
   "update-node-name": "Aktualizuj nazwę",
   "upload-image": "Prześlij obraz",
+  "upload-images": "<0>Wgraj obrazy</0>",
   "uploading-file": "Przesyłanie pliku {progress}% ...",
   "uploading-files": "Wgrywanie {loadedFiles} z {totalFiles} {progress}% ...",
-  "upload-or-copy-images": "<0>Wgraj obrazy</0> lub <1>Skopiuj obraz</1>",
   "upload-or-copy-or-drop-images": "<0>Wgraj obrazy</0> lub <1>Skopiuj obraz</1><2/>lub przeciągnij swoje obrazy tutaj",
   "upload-too-large": "Plik \"{name}\" nie może zostać wgrany, ponieważ jego rozmiar ({size}) jest większy niż maksymalny dozwolony rozmiar ({maxSize})",
   "used-by-addon": "Używane przez dodatek:",
