Undo/redo buttons added to the compact editor panel.

--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -569,6 +569,7 @@
   "received-mail": "Otrzymano już maila",
   "recommend-set-email": "<0>Zalecamy podanie adresu e-mail.</0> Może się przydać, na przykład, do odzyskania hasła. Nie martw się, nikt inny go nie zobaczy.",
   "redirecting": "Przekierowanie...",
+  "redo": "Powtórz",
   "register": "Zarejestruj",
   "register-different-name": "Zarejestruj inną nazwę",
   "register-new-name": "Zarejestruj nową nazwę",
