--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -569,6 +569,7 @@
   "received-mail": "Уже получил письмо",
   "recommend-set-email": "<0>Рекомендуем указать адрес электронной почты.</0> Он может пригодиться, например, для восстановления пароля. Не беспокойтесь, никто посторонний его не увидит.",
   "redirecting": "Перенаправляю...",
+  "redo": "Повторить",
   "register": "Регистрация",
   "register-different-name": "Зарегистрировать другое имя",
   "register-new-name": "Регистрация нового имени",
