--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -569,6 +569,7 @@
   "received-mail": "Received the mail already",
   "recommend-set-email": "<0>We recommend providing an email address.</0> It may come in handy, for example, for password recovery. Don't worry, no one else will see it.",
   "redirecting": "Redirecting...",
+  "redo": "Redo",
   "register": "Register",
   "register-different-name": "Register a different name",
   "register-new-name": "Register a New Name",
