--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -569,6 +569,7 @@
   "received-mail": "Вже отримав листа",
   "recommend-set-email": "<0>Рекомендуємо вказати адресу електронної пошти.</0> Вона може знадобитися, наприклад, для відновлення пароля. Не хвилюйтеся, ніхто сторонній її не побачить.",
   "redirecting": "Перенаправляю...",
+  "redo": "Повторити",
   "register": "Реєстрація",
   "register-different-name": "Зареєструвати інше ім'я",
   "register-new-name": "Реєстрація нового імені",
