When files are selected, inform user about files that are too large to be uploaded.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -373,6 +373,7 @@
   "kick-discussion": "Kick from discussion",
   "kicking-node": "Kick {name} from the discussion",
   "language": "Language",
+  "large-image": "Large",
   "last-post": "last",
   "last-used": "Last used:",
   "link": "Link",
