--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -373,6 +373,7 @@
   "kick-discussion": "Wyrzuć z dyskusji",
   "kicking-node": "Wyrzuć {name} z dyskusji",
   "language": "Język",
+  "large-image": "Duży",
   "last-post": "ostatni",
   "last-used": "Ostatnio używane:",
   "link": "Link",
