--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -373,6 +373,7 @@
   "kick-discussion": "Выгнать из обсуждения",
   "kicking-node": "Выгнать {name} из обсуждения",
   "language": "Язык",
+  "large-image": "Большая",
   "last-post": "последний",
   "last-used": "Последнее использование:",
   "link": "Ссылка",
