--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -373,6 +373,7 @@
   "kick-discussion": "Вигнати з обговорення",
   "kicking-node": "Вигнати {name} з обговорення",
   "language": "Мова",
+  "large-image": "Велика",
   "last-post": "останній",
   "last-used": "Останнє використання:",
   "link": "Посилання",
