Description of the scope "update-feeds" corrected.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -612,7 +612,7 @@
     "subscribe": "Subscribe and unsubscribe to feeds",
     "tokens": "Manage authentication tokens",
     "update-comment": "Modify your comments",
-    "update-feeds": "Modify status of stories in feeds",
+    "update-feeds": "Add and modify stories in feeds",
     "update-post": "Modify your posts",
     "update-profile": "Change the profile",
     "update-settings": "Modify settings",
