--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -612,7 +612,7 @@
     "subscribe": "Subskrybowanie i anulowanie subskrypcji kanałów",
     "tokens": "Zarządzaj tokenami autoryzacyjnymi",
     "update-comment": "Modyfikuj swoje komentarze",
-    "update-feeds": "Modyfikowanie statusu historii w kanałach",
+    "update-feeds": "Dodawanie i modyfikowanie historii w kanałach",
     "update-post": "Modyfikuj swoje posty",
     "update-profile": "Zmienianie profilu",
     "update-settings": "Modyfikowanie ustawień",
