--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -612,7 +612,7 @@
     "subscribe": "Подписываться и отписываться на ленты",
     "tokens": "Управление токенами для аутентификации",
     "update-comment": "Изменять ваши комментарии",
-    "update-feeds": "Изменять статус историй в лентах",
+    "update-feeds": "Добавлять и изменять истории в лентах",
     "update-post": "Изменять ваши посты",
     "update-profile": "Изменять профиль",
     "update-settings": "Изменять настройки",
