--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -612,7 +612,7 @@
     "subscribe": "Підписуватись та відписуватись на стрічки",
     "tokens": "Керування токенами для автентифікації",
     "update-comment": "Змінювати ваші коментарі",
-    "update-feeds": "Змінювати статус історій у стрічках",
+    "update-feeds": "Додавати та змінювати історії у стрічках",
     "update-post": "Змінювати ваші пости",
     "update-profile": "Змінювати профіль",
     "update-settings": "Змінювати налаштування",
