Added REL_SEARCH constant to reference the search engine (defined in settings).

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -750,6 +750,7 @@
           "html": "Paste with tags",
           "text": "Paste text only"
         },
+        "search_node-name": "Search engine node name",
         "src-format_default": "Formatting of profile and other texts (default)",
         "src-format_default-items": {
           "html--visual": "Visual editor",
