--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -750,6 +750,7 @@
           "html": "Вставлять с тегами",
           "text": "Вставлять только текст"
         },
+        "search_node-name": "Имя узла поисковой системы",
         "src-format_default": "Форматирование профиля и других текстов (по умолчанию)",
         "src-format_default-items": {
           "html--visual": "Визуальный редактор",
