--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -750,6 +750,7 @@
           "html": "Вставляти з тегами",
           "text": "Вставляти тільки текст"
         },
+        "search_node-name": "Ім'я вузла пошукової системи",
         "src-format_default": "Форматування профілю та інших текстів (за замовчуванням)",
         "src-format_default-items": {
           "html--visual": "Візуальний редактор",
