Basic search and search page display.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -627,6 +627,7 @@
     "view-profile": "View all fields of the profile",
     "view-settings": "View settings"
   },
+  "search": "Search",
   "secret-code": "Secret code",
   "secret-words": "Secret Words",
   "select": "Select",
@@ -955,12 +956,14 @@
   "video-internet": "Video from the Internet",
   "view-as-chart": "View as chart",
   "view-as-list": "View as list",
+  "view-comment": "View comment →",
   "view-comments": "View comments",
   "view-complaints": "View complaints",
   "view-earlier-comments": "View earlier comments",
   "view-images-grid": "View images as grid",
   "view-images-list": "View images as list",
   "view-later-comments": "View later comments",
+  "view-post": "View post →",
   "view-previous-complaints": "View previous complaints",
   "view-source": "View source",
   "view-source-title": "View Source",
