--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -627,6 +627,7 @@
     "view-profile": "Wyświetlanie wszystkich pól profilu",
     "view-settings": "Wyświetl ustawienia"
   },
+  "search": "Szukaj",
   "secret-code": "Kod tajny",
   "secret-words": "Tajne słowa",
   "select": "Wybierz",
@@ -955,12 +956,14 @@
   "video-internet": "Wideo z Internetu",
   "view-as-chart": "Wyświetl jako wykres",
   "view-as-list": "Wyświetl jako listę",
+  "view-comment": "Zobacz komentarz →",
   "view-comments": "Wyświetl komentarze",
   "view-complaints": "Pokaż skargi",
   "view-earlier-comments": "Wyświetl wcześniejsze komentarze",
   "view-images-grid": "Wyświetl obrazy jako siatkę",
   "view-images-list": "Wyświetl obrazy jako listę",
   "view-later-comments": "Wyświetl późniejsze komentarze",
+  "view-post": "Zobacz post →",
   "view-previous-complaints": "Pokaż poprzednie skargi",
   "view-source": "Wyświetl źródło",
   "view-source-title": "Wyświetl źródło",
