--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -627,6 +627,7 @@
     "view-profile": "Просматривать все поля профиля",
     "view-settings": "Просматривать настройки"
   },
+  "search": "Поиск",
   "secret-code": "Секретный код",
   "secret-words": "Секретные слова",
   "select": "Выбрать",
@@ -955,12 +956,14 @@
   "video-internet": "Видео из Интернета",
   "view-as-chart": "В виде диаграммы",
   "view-as-list": "В виде списка",
+  "view-comment": "Смотреть комментарий →",
   "view-comments": "Показать комментарии",
   "view-complaints": "Показать жалобы",
   "view-earlier-comments": "Показать предыдущие комментарии",
   "view-images-grid": "Показать картинки в виде мозаики",
   "view-images-list": "Показать картинки в виде списка",
   "view-later-comments": "Показать следующие комментарии",
+  "view-post": "Смотреть пост →",
   "view-previous-complaints": "Показать предыдущие жалобы",
   "view-source": "Показать исходный текст",
   "view-source-title": "Показать исходный текст",
