--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -627,6 +627,7 @@
     "view-profile": "Переглядати всі поля профілю",
     "view-settings": "Переглядати налаштування"
   },
+  "search": "Пошук",
   "secret-code": "Секретний код",
   "secret-words": "Секретні слова",
   "select": "Обрати",
@@ -955,12 +956,14 @@
   "video-internet": "Відео з Інтернету",
   "view-as-chart": "У вигляді діаграми",
   "view-as-list": "У вигляді списку",
+  "view-comment": "Переглянути коментар →",
   "view-comments": "Показати коментарі",
   "view-complaints": "Показати скарги",
   "view-earlier-comments": "Показати попередні коментарі",
   "view-images-grid": "Показати картинки у вигляді мозаїки",
   "view-images-list": "Показати картинки у вигляді списку",
   "view-later-comments": "Показати наступні коментарі",
+  "view-post": "Переглянути пост →",
   "view-previous-complaints": "Показати попередні скарги",
   "view-source": "Показати початковий текст",
   "view-source-title": "Показати початковий текст",
