"Nothing found" display in search results.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -441,6 +441,7 @@
   "note-complaints-public": "<b>Note:</b> All complaints to the sheriff are public. You can ask not to publish your complaint for some reason, but the final decision is made by the sheriff.",
   "no-text": "(no text)",
   "not-following-comments": "Not following comments",
+  "nothing-found": "Nothing found",
   "nothing-yet": "Nothing yet.",
   "notify-about-update": "Notify followers about the update",
   "notify-followers": "Notify followers",
@@ -916,6 +917,7 @@
   "transfer-existing-name": "Transfer an existing name",
   "transfer-existing-name-button": "Transfer an Existing Name",
   "transfer-node-name": "Transfer Name From Another Node",
+  "try-refine-search": "Try to refine your search terms or adjust filters",
   "turn-off": "Turn off",
   "unblock": "Unblock",
   "unblock-after-days": "Unblock after <0/> {count, plural, one {day} other {days}}",
