--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -441,6 +441,7 @@
   "note-complaints-public": "<b>Uwaga:</b> wszystkie skargi kierowane do szeryfa są publiczne. Możesz poprosić o niepublikowanie Twojej skargi z jakiegokolwiek powodu, ale ostateczna decyzja należy do szeryfa.",
   "no-text": "(brak tekstu)",
   "not-following-comments": "Nie śledzi komentarzy",
+  "nothing-found": "Nic nie znaleziono",
   "nothing-yet": "Jeszcze nic.",
   "notify-about-update": "Powiadom obserwujących o aktualizacji",
   "notify-followers": "Powiadom obserwujących",
@@ -916,6 +917,7 @@
   "transfer-existing-name": "Przenieś istniejącą nazwę",
   "transfer-existing-name-button": "Przenieś istniejącą nazwę",
   "transfer-node-name": "Przenieś nazwę z innego węzła",
+  "try-refine-search": "Spróbuj zawęzić wyszukiwane hasła lub dostosować filtry",
   "turn-off": "Wyłącz",
   "unblock": "Odblokuj",
   "unblock-after-days": "Odblokuj po <0/> {count, plural, one {dniu} few {dniach} many {dniach} other {dniach}}",
