--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -441,6 +441,7 @@
   "note-complaints-public": "<b>Примечание:</b> Все жалобы шерифу являются общедоступными. Вы можете попросить не публиковать вашу жалобу по какой-либо причине, но окончательное решение принимает шериф.",
   "no-text": "(без текста)",
   "not-following-comments": "Не слежу за комментариями",
+  "nothing-found": "Ничего не найдено",
   "nothing-yet": "Тут пока пусто.",
   "notify-about-update": "Уведомить подписчиков об обновлении",
   "notify-followers": "Уведомить подписчиков",
@@ -916,6 +917,7 @@
   "transfer-existing-name": "Переместить существующее имя",
   "transfer-existing-name-button": "Переместить существующее имя",
   "transfer-node-name": "Переместить имя с другого узла",
+  "try-refine-search": "Попробуйте уточнить поисковый запрос или настроить фильтры",
   "turn-off": "Выключить",
   "unblock": "Разблокировать",
   "unblock-after-days": "Разблокировать через <0/> {count, plural, one {день} few {дня} other {дней}}",
