--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -441,6 +441,7 @@
   "note-complaints-public": "<b>Примітка:</b> Усі скарги шерифові є відкритими. Ви можете попросити не публікувати вашу скаргу з якоїсь причини, але остаточне рішення приймає шериф.",
   "no-text": "(без текста)",
   "not-following-comments": "Не слідкую за коментарями",
+  "nothing-found": "Нічого не знайдено",
   "nothing-yet": "Тут поки що порожньо.",
   "notify-about-update": "Повідомити підписникам про оновлення",
   "notify-followers": "Повідомити підписникам",
@@ -916,6 +917,7 @@
   "transfer-existing-name": "Перемістити існуюче ім'я",
   "transfer-existing-name-button": "Перемістити існуюче ім'я",
   "transfer-node-name": "Перемістити ім'я з іншого вузла",
+  "try-refine-search": "Спробуйте уточнити пошуковий запит або налаштувати фільтри",
   "turn-off": "Вимкнути",
   "unblock": "Розблокувати",
   "unblock-after-days": "Розблокувати через <0/> {count, plural, one {день} few {дні} other {днів}}",
