Button to load more search results.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -863,6 +863,7 @@
   "sheriff-order-sent": "Sheriff's order is sent",
   "show-hidden-comments": "Show hidden comments",
   "show-list-reactions": "Show the detailed list of reactions",
+  "show-more-results": "Show more results",
   "show-number-reactions": "Show the number of reactions",
   "signature-correct": "Signature is correct",
   "signature-incorrect": "Signature is incorrect",
