--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -863,6 +863,7 @@
   "sheriff-order-sent": "Rozkaz szeryfa został wysłany",
   "show-hidden-comments": "Pokaż ukryte komentarze",
   "show-list-reactions": "Pokaż szczegółową listę reakcji",
+  "show-more-results": "Pokaż więcej wyników",
   "show-number-reactions": "Pokaż liczbę reakcji",
   "signature-correct": "Podpis jest poprawny",
   "signature-incorrect": "Podpis jest niepoprawny",
