--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -863,6 +863,7 @@
   "sheriff-order-sent": "Приказ шерифа отправлен",
   "show-hidden-comments": "Показать скрытые комментарии",
   "show-list-reactions": "Показывать список реакций",
+  "show-more-results": "Показать ещё результаты",
   "show-number-reactions": "Показывать число реакций",
   "signature-correct": "Подпись верна",
   "signature-incorrect": "Подпись неверна",
