--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -863,6 +863,7 @@
   "sheriff-order-sent": "Наказ шерифа надіслано",
   "show-hidden-comments": "Показати приховані коментарі",
   "show-list-reactions": "Показувати список реакцій",
+  "show-more-results": "Показати ще результати",
   "show-number-reactions": "Показувати кількість реакцій",
   "signature-correct": "Підпис вірний",
   "signature-incorrect": "Підпис невірний",
