Allow searching in the current blog.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -632,6 +632,7 @@
   "search-tab": {
     "comments": "Comments",
     "content": "All content",
+    "current-blog": "This blog",
     "own-blog": "My blog",
     "people": "People",
     "postings": "Posts"
