--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -632,6 +632,7 @@
   "search-tab": {
     "comments": "Komentarze",
     "content": "Cała zawartość",
+    "current-blog": "Ten blog",
     "own-blog": "Mój blog",
     "people": "Ludzie",
     "postings": "Posty"
