--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -632,6 +632,7 @@
   "search-tab": {
     "comments": "Комментарии",
     "content": "Весь контент",
+    "current-blog": "Этот блог",
     "own-blog": "Мой блог",
     "people": "Люди",
     "postings": "Посты"
