Basic infrastructure for SearchFilterDialog.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -229,6 +229,7 @@
   },
   "female": "Female",
   "female-short": "f.",
+  "filters": "Filters",
   "find-more-people": "Find more people →",
   "fold": "Fold",
   "follow-comments": "Follow comments",
