--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -229,6 +229,7 @@
   },
   "female": "Kobieta",
   "female-short": "k.",
+  "filters": "Filtry",
   "find-more-people": "Znajdź więcej osób →",
   "fold": "Zwiń",
   "follow-comments": "Obserwuj komentarze",
