--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -229,6 +229,7 @@
   },
   "female": "Женский",
   "female-short": "ж.",
+  "filters": "Фильтры",
   "find-more-people": "Найти ещё людей →",
   "fold": "Свернуть",
   "follow-comments": "Следить за комментариями",
