--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -229,6 +229,7 @@
   },
   "female": "Жіночий",
   "female-short": "ж.",
+  "filters": "Фільтри",
   "find-more-people": "Знайти ще людей →",
   "fold": "Згорнути",
   "follow-comments": "Слідкувати за коментарями",
