Filter search results by entry type.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -23,6 +23,7 @@
   "allow-showing-blog-google-play": "<0>Allow</0> showing the blog <1>{name}</1> on Android (Google Play).",
   "allow-showing-comment-google-play": "<0>Allow</0> showing the <1>{commentName}</1>'s comment \"{commentHeading}\" to the <1>{postingName}</1>'s post \"{postingHeading}\" on Android (Google Play).",
   "allow-showing-post-google-play": "<0>Allow</0> showing the <1>{name}</1>'s post \"{heading}\" on Android (Google Play).",
+  "any": "Any",
   "application-name": "Application name",
   "ask": "Ask",
   "ask-count": "Ask {count} {count, plural, one {user} other {users}}",
@@ -485,6 +486,7 @@
   "post-button": "Publish",
   "post-edited-conflict": "The post was edited by somebody.",
   "posting-not-found": "Post is not found or cannot be displayed.",
+  "postings": "Posts",
   "posting-updated-at": "updated",
   "post-not-allowed": "You cannot post to this blog.",
   "post-preview": "Preview post",
@@ -929,6 +931,7 @@
   "transfer-node-name": "Transfer Name From Another Node",
   "try-refine-search": "Try to refine your search terms or adjust filters",
   "turn-off": "Turn off",
+  "type-content": "Type of content",
   "unblock": "Unblock",
   "unblock-after-days": "Unblock after <0/> {count, plural, one {day} other {days}}",
   "unblock-after-time": "Unblock after some time",
