--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -23,6 +23,7 @@
   "allow-showing-blog-google-play": "<0>Разрешить</0> показ блога <1>{name}</1> на Android (Google Play).",
   "allow-showing-comment-google-play": "<0>Разрешить</0> показ комментария <1>{commentName}</1> \"{commentHeading}\" к посту <1>{postingName}</1> \"{postingHeading}\" на Android (Google Play).",
   "allow-showing-post-google-play": "<0>Разрешить</0> показ поста <1>{name}</1> \"{heading}\" на Android (Google Play).",
+  "any": "Любой",
   "application-name": "Имя приложения",
   "ask": "Попросить",
   "ask-count": "Попросить {count} {count, plural, one {пользователя} other {пользователей}}",
@@ -485,6 +486,7 @@
   "post-button": "Опубликовать",
   "post-edited-conflict": "Пост был кем-то отредактирован.",
   "posting-not-found": "Пост не найден или не может быть показан.",
+  "postings": "Посты",
   "posting-updated-at": "изменён",
   "post-not-allowed": "Вы не можете писать в этот блог.",
   "post-preview": "Предпросмотр поста",
@@ -929,6 +931,7 @@
   "transfer-node-name": "Переместить имя с другого узла",
   "try-refine-search": "Попробуйте уточнить поисковый запрос или настроить фильтры",
   "turn-off": "Выключить",
+  "type-content": "Тип контента",
   "unblock": "Разблокировать",
   "unblock-after-days": "Разблокировать через <0/> {count, plural, one {день} few {дня} other {дней}}",
   "unblock-after-time": "Разблокировать через некоторое время",
