--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -23,6 +23,7 @@
   "allow-showing-blog-google-play": "<0>Дозволити</0> показ блогу <1>{name}</1> на Android (Google Play).",
   "allow-showing-comment-google-play": "<0>Дозволити</0> показ коментаря <1>{commentName}</1> \"{commentHeading}\" до поста <1>{postingName}</1> \"{postingHeading}\" на Android (Google Play).",
   "allow-showing-post-google-play": "<0>Дозволити</0> показ посту <1>{name}</1> \"{heading}\" на Android (Google Play).",
+  "any": "Будь-який",
   "application-name": "Ім'я додатку",
   "ask": "Попросити",
   "ask-count": "Попросити {count} {count, plural, one {користувача} other {користувачів}}",
@@ -485,6 +486,7 @@
   "post-button": "Опублікувати",
   "post-edited-conflict": "Пост був кимось відредагований.",
   "posting-not-found": "Пост не знайдений або не може бути показаний.",
+  "postings": "Пости",
   "posting-updated-at": "змінений",
   "post-not-allowed": "Ви не в змозі писати у цей блог.",
   "post-preview": "Перегляд поста",
@@ -929,6 +931,7 @@
   "transfer-node-name": "Перемістити ім'я з іншого вузла",
   "try-refine-search": "Спробуйте уточнити пошуковий запит або налаштувати фільтри",
   "turn-off": "Вимкнути",
+  "type-content": "Тип контенту",
   "unblock": "Розблокувати",
   "unblock-after-days": "Розблокувати через <0/> {count, plural, one {день} few {дні} other {днів}}",
   "unblock-after-time": "Розблокувати через певний час",
