--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -23,6 +23,7 @@
   "allow-showing-blog-google-play": "<0>Zezwalaj</0> na wyświetlanie bloga <1>{name}</1> na Androidzie (Google Play).",
   "allow-showing-comment-google-play": "<0>Zezwalaj</0> na wyświetlanie na Androidzie komentarza użytkownika <1>{commentName}</1> „{commentHeading}” do posta użytkownika <1>{postingName}</1> „{postingHeading}” (Google Play).",
   "allow-showing-post-google-play": "<0>Zezwalaj</0> na wyświetlanie posta użytkownika <1>{name}</1> „{heading}” na Androidzie (Google Play).",
+  "any": "Dowolny",
   "application-name": "Nazwa aplikacji",
   "ask": "Zapytaj",
   "ask-count": "Zapytaj {count} {count, plural, one {użytkownika} few {użytkowników} many {użytkowników} other {użytkowników}}",
@@ -485,6 +486,7 @@
   "post-button": "Opublikuj",
   "post-edited-conflict": "Post został edytowany przez kogoś innego.",
   "posting-not-found": "Nie znaleziono posta lub nie można go wyświetlić.",
+  "postings": "Posty",
   "posting-updated-at": "zaktualizowany",
   "post-not-allowed": "Nie możesz publikować na tym blogu.",
   "post-preview": "Podgląd posta",
@@ -929,6 +931,7 @@
   "transfer-node-name": "Przenieś nazwę z innego węzła",
   "try-refine-search": "Spróbuj zawęzić wyszukiwane hasła lub dostosować filtry",
   "turn-off": "Wyłącz",
+  "type-content": "Typ treści",
   "unblock": "Odblokuj",
   "unblock-after-days": "Odblokuj po <0/> {count, plural, one {dniu} few {dniach} many {dniach} other {dniach}}",
   "unblock-after-time": "Odblokuj po pewnym czasie",
